# autumn-2025-results

./: .gitignore  README.md  data_analysis.ipynb  notebook.ipynb  pyproject.toml
data/: manual_analysis_of_385_random_subjects.csv  manual_verification_of_385_random_subjects.csv
data/raw_results/: used_options.py
data/samples/: 385_random_bare_results.csv  385_random_subjects.csv
data/truth/: confusion_matrix.csv  edge_cases.csv  truth.csv  verified.txt
src/: config.py  data_access.py  domain_model.py  draw_k_random_subjects.py  export.py  main.py  merge_subjects_and_commits.py  preprocess.py  verify.py
